[package]
name = "echo_btc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlite = "0.27.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
oauth = { version = "0.6", package = "oauth1-request" }
